--- a/package.json
+++ b/package.json
@@ -1,44 +1,43 @@
 {
-  "homepage": "https://raavann.github.io",
-  "name": "raavann.github.io",
-  "version": "0.1.0",
+  "name": "raavann.me",
+  "author": {
+    "name": "Anurudh Mhatre"
+  },
+  "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public --no-clear",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.1",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.39",
+    "@tsconfig/svelte": "^3.0.0",
+    "rollup": "^2.62.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-glslify": "^1.2.1",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.2.11",
+    "svelte-preprocess": "^4.10.1",
+    "tslib": "^2.0.0",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "animejs": "^3.2.1",
+    "bezier-easing": "^2.1.0",
+    "detect-gpu": "^4.0.7",
+    "node-sass": "^7.0.1",
+    "sass": "^1.54.4",
+    "sirv-cli": "^2.0.1",
+    "slickscrolljs": "^1.3.2",
+    "three": "^0.136.0",
+    "wait-for-element-transition": "^3.3.1"
   }
 }
