--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "deploy": "node ./gh-pages.js",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
@@ -17,6 +18,7 @@
     "@rollup/plugin-typescript": "^8.3.0",
     "@sveltejs/adapter-static": "^1.0.0-next.39",
     "@tsconfig/svelte": "^3.0.0",
+    "gh-pages": "^4.0.0",
     "rollup": "^2.62.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-glslify": "^1.2.1",
