--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
+    "deploy" : "node gh-pages.js",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
