--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "deploy" : "node gh-pages.js",
+    "deploy": "node gh-pages.js",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
@@ -33,6 +33,7 @@
     "animejs": "^3.2.1",
     "bezier-easing": "^2.1.0",
     "detect-gpu": "^4.0.7",
+    "fontawesome-svelte": "^2.0.1",
     "gh-pages": "^4.0.0",
     "node-sass": "^7.0.1",
     "sass": "^1.54.4",
